@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-10-03T16:34:39Z",
+  "timestamp" : "2022-10-07T16:32:23Z",
   "count_outdated" : 344,
   "uniques_outdated" : 209,
-  "count" : 345,
-  "uniques" : 210,
+  "count" : 347,
+  "uniques" : 211,
   "clones" : [
     {
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
