@@ -1,3 +1,11 @@
+2022-10-07T16:32:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3206260109
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 209 344 / 210 345
+* notice: next accum: outdated-unq outdated-all / unq all: 209 344 / 211 347
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-07]
+
 2022-10-03T16:34:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3175835471
 * notice: last 14d: unq all: 1 1
